# ChatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp  group.hpp  groupuser.hpp  user.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  main1.txt
src/server/: CMakeLists.txt  charserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson.cpp
test/testmuduo/: CMakeLists.txt  main.cpp  muduo_server.cpp
test/testmysql/: testmysql.cpp
